[ADD]至少保留镜像个数设置

--- a/delete_policy.yml
+++ b/delete_policy.yml
@@ -7,6 +7,8 @@ password: password
 dry_run: true
 # 删除以现在时间为基础以前的镜像，单位为小时，默认72
 interval_hour: 72
+# 至少保留镜像个数，默认10
+mix_count: 10
 # 忽略这个项目下所有镜像
 ignore_projects:
 # 项目删除策略
@@ -31,7 +33,7 @@ tags:
   # 删除策略
   include:
     # 按关键字进行删除
-    keys: dev,test
+    keys: dev
     # 按正则表达式删除
     regex:
   # 排除策略，删除策略与排除策略都匹配，以排除策略为准
